<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_system.Register_page">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="50dp"
                android:background="@drawable/gradient_1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/spicy_rice_regular"
                    android:gravity="center"
                    android:text="@string/registration"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/black"
                    app:boxBackgroundColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:hintTextColor="#000000">


                    <EditText
                        android:id="@+id/TextUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/input_background"
                        android:drawableStart="@drawable/user_24"
                        android:drawablePadding="2dp"
                        android:hint="@string/hint_employee_id"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLength="23"
                        android:textColor="#000000" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/black"
                    app:boxBackgroundColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:hintTextColor="#000000">

                    <EditText
                        android:id="@+id/TextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/input_background"
                        android:drawableStart="@drawable/lock_24"
                        android:ems="10"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textColor="#000000" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/black"
                    app:boxBackgroundColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:hintTextColor="#000000">

                    <EditText
                        android:id="@+id/TextConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/input_background"
                        android:drawableStart="@drawable/lock_24"
                        android:ems="10"
                        android:hint="@string/hint_re_password"
                        android:inputType="textPassword"
                        android:textColor="#000000" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:backgroundTint="#43A047"
                    android:text="sign up"
                    android:textColor="#FFFFFF"
                    app:cornerRadius="25dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>